<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">League Stats</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="hint">Summoner Name</string>
    <string name="region">Region</string>
    <string name="submit">Go!</string>
    <string name="view_runes">Runes</string>
    <string name="view_masteries">Masteries</string>
    <string name="match_history">Match History</string>
    <string name="select_runes">Select Rune Page</string>
    <string name="select_masteries">Select Mastery Page</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ranked_stats">Ranked Stats</string>

    <string-array name="region_selector">
        <item>NA</item>
        <item>EUNE</item>
        <item>EUW</item>
        <item>BR</item>
    </string-array>

    <string-array name="mastery_selector">
        <item>Test Page 1</item>
        <item>Test Page 2</item>
        <item>Test Page 3</item>
        <item>Test Page 4</item>
    </string-array>

    <string-array name="rune_selector">
        <item>Test Page 1</item>
        <item>Test Page 2</item>
        <item>Test Page 3</item>
        <item>Test Page 4</item>
    </string-array>

    <string-array name="layers">
        <item>Home</item>
        <item>Twitch</item>
        <item>Community</item>
        <item>ESports</item>
    </string-array>

</resources>
