<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:background="#111111"
    android:paddingRight="10dp">



    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon"
        android:textColor="#C49246"
        android:paddingBottom="2dip"
        android:paddingLeft="5dip"
        android:paddingTop="6dip"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/summonerLevel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/icon"
        android:layout_below="@id/name"
        android:textColor="#C49246"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:paddingLeft="5dip"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/icon"
        android:orientation="vertical">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/runes"
        android:text = "@string/view_runes"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/masteries"
        android:text ="@string/view_masteries"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history"
        android:text="@string/match_history"/>

    </LinearLayout>

</RelativeLayout>